# rootsage

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  config.json  pyproject.toml  report.xlsx
rootsage/: __init__.py  app.py  clf.py  config.py  db.py
rootsage/classifiers/: K.joblib  N.joblib  P.joblib
rootsage/templates/: base.html  dashboard-metrics.html  dashboard.html  login.html  register.html  reports.html  sensors-table.html  sensors.html  users-table.html  users.html
